# askme-vllm

./: .gitignore  .pre-commit-config.yaml  README.md  alembic.ini  prepare_hitl.ipynb  pyproject.toml
.github/workflows/: tests.yml
FleeceKMBackend/: __init__.py  __main__.py  conftest.py  settings.py
FleeceKMBackend/db/: base.py  utils.py
FleeceKMBackend/db/dao/: dummy_dao.py
FleeceKMBackend/services/: __init__.py
FleeceKMBackend/tests/: __init__.py  test_dummy.py
FleeceKMBackend/web/: __init__.py  application.py  lifetime.py
analytics/: analytics.ipynb  analytics.py  analytics_debug.ipynb  comparison.ipynb  large_sample.ipynb
app/: main.py
app/core/: config.py
app/db/: models.py  utils.py
askme-vllm/: config.py  helpers.py  llm.py  main.py  models.py
askme-vllm/dataset/: answers.py  common.py  questions.py  ratings.py
askme-vllm/generation/: stage2stage.py
askmevllm/: helpers.py  llm.py  main.py  models.py
askmevllm/dataset/: answers.py  common.py  questions.py  ratings.py
deploy/: Dockerfile  docker-compose.dev.yml  docker-compose.yml
experiments/: comparison.ipynb  large_sample.ipynb  postprocessing.ipynb  prepare_data.ipynb  sampled_high_rating_five_word_answers.csv  short_anwser.ipynb  statistics_10k.ipynb  statistics_all.ipynb  statistics_sample.ipynb
experiments/data_samples/: low_ratings_samples.csv  paragraph-questions-100-short-answers-raw.csv  paragraph-questions-100-short-answers.csv  paragraph-questions-100.csv  paragraph-questions-10k-short-answers.csv
experiments/lib/: data_utils.py  eval_utils.py  llm_utils.py  stats_utils.py
experiments/scripts/: combine_csvs.py  generate_sa_batch.sh  generate_short_answers.py  split_csv.py
fleecekm_server/: __init__.py  __main__.py  conftest.py  settings.py
fleecekm_server/db/: base.py  utils.py
fleecekm_server/services/: __init__.py
fleecekm_server/tests/: __init__.py
fleecekm_server/web/: __init__.py  application.py  lifetime.py
fleecekmbackend/: main.py  server.py
fleecekmbackend/core/: config.py  utils.py
fleecekmbackend/db/: ctl.py  database.py  helpers.py  io.py  models.py  utils.py
scripts/: ecosystem.config.js  eval_openai.py  generate_zs_answers.py  kill_batch_pid.sh  kill_batch_sock.sh  load_data.py  playground.ipynb  start.sh  start_batch.sh  start_s2s.sh
workflows/: tests.yml
(+32 files in other folders)
