[tool.poetry]
name = "fleecekmbackend"
version = "0.1.0"
description = ""
authors = ["nociza <azicon@berkeley.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110.0"
sqlalchemy = "^2.0.28"
databases = "^0.9.0"
aiosqlite = "^0.20.0"
pandas = "^2.2.1"
uvicorn = "^0.28.0"
requests = "^2.31.0"
together = "^0.2.11"
python-dotenv = "^1.0.1"
aiomysql = "^0.2.0"
cryptography = "^42.0.5"
tqdm = "^4.66.2"
openai = "^1.26.0"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"
statsmodels = "^0.14.2"
ipywidgets = "^8.1.2"
widgetsnbextension = "^4.0.10"
matplotlib = "^3.8.4"
seaborn = "^0.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
