[tool.poetry]
name = "askmevllm"
version = "0.1.0"
description = ""
authors = ["nociza <azicon@berkeley.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110.0"
sqlalchemy = "^2.0.28"
databases = "^0.9.0"
aiosqlite = "^0.20.0"
pandas = "^2.2.1"
uvicorn = "^0.28.0"
requests = "^2.31.0"
together = "^0.2.11"
python-dotenv = "^1.0.1"
aiomysql = "^0.2.0"
cryptography = "^42.0.5"
tqdm = "^4.66.2"
openai = "^1.26.0"
plotly = "^5.22.0"
nbformat = "^5.10.4"
aiohttp = "^3.9.5"
vllm = "^0.5.0.post1"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"
statsmodels = "^0.14.2"
ipywidgets = "^8.1.2"
widgetsnbextension = "^4.0.10"
matplotlib = "^3.8.4"
seaborn = "^0.13.2"
nltk = "^3.8.1"
spacy = "^3.7.4"
pip = "^24.0"
scikit-learn = "^1.5.0"
ultraimport = "^0.0.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
